# scarecrow

./: LICENSE  README.md  setup.cfg  setup.py
Scarecrow/: LICENSE  README.md  setup.cfg  setup.py
_app/templates/: login.html
_archive/: scarecrow_data-0.0.1-py3-none-any.whl  scarecrow_data-0.0.2-py3-none-any.whl  scarecrow_data-0.0.3-py3-none-any.whl
app/: app.py  classes.py
app/templates/: index.html  model.html  outcome.html  signup.html
