[metadata]
name = scarecrow_data
version = 0.0.2
url = https://github.com/mdghayman/Scarecrow
author = Michael Hayman
author_email = mdghayman@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Scarecrow offers low code web development for data science.
long_description = file: README.md
long_decription_content_type = text/markdown

[options]
python_requires = >= 3.6
